--- a/templates/admin/property/edit/content.html.twig
+++ b/templates/admin/property/edit/content.html.twig
@@ -18,29 +18,29 @@
                                     <div class="nav nav-tabs" id="nav-tab" role="tablist">
                                         <button class="nav-link active" id="nav-item-info-tab" data-bs-toggle="tab" data-bs-target="#nav-item-info" type="button" role="tab" aria-controls="nav-item-info" aria-selected="true">
                                             <span class="serial">01</span>
-                                            Step
+                                            Etape
                                         </button>
                                         <button class="nav-link" id="nav-item-details-tab" data-bs-toggle="tab" data-bs-target="#nav-item-details" type="button" role="tab" aria-controls="nav-item-details" aria-selected="false">
                                             <span class="serial">02</span>
-                                            Step
+                                            Etape
                                         </button>
                                         <button class="nav-link" id="nav-user-info-tab" data-bs-toggle="tab" data-bs-target="#nav-user-info" type="button" role="tab" aria-controls="nav-user-info" aria-selected="false">
                                             <span class="serial">03</span>
-                                            Step
+                                            Etape
                                         </button>
                                     </div>
                                 </nav>
-                                {{ form_start(form, {attr: {class: 'default-form-style'}}) }}
+                                {{ form_start(form) }}
                                 <div class="tab-content" id="nav-tabContent">
                                     <div class="tab-pane fade show active" id="nav-item-info" role="tabpanel" aria-labelledby="nav-item-info-tab">
 
                                         <div class="step-one-content">
                                             <div class="row">
-                                                <div class="col-12">
-                                                    {{ form_row(form.title) }}
+                                                <div class="col-12 mt-4">
+                                                    {{ form_row(form.title, {attr: {class: 'form-style'}}) }}
                                                 </div>
-                                                <div class="col-12">
-                                                    {{ form_row(form.categories) }}
+                                                <div class="col-12 mt-4">
+                                                    {{ form_row(form.categories, {attr: {class: 'form-style'}}) }}
                                                 </div>
                                             </div>
                                         </div>
@@ -50,28 +50,28 @@
 
                                         <div class="step-two-content">
                                             <div class="row">
-                                                <div class="col-12">
-                                                    {{ form_row(form.price) }}
+                                                <div class="col-12 mt-4">
+                                                    {{ form_row(form.price, {attr: {class: 'form-style'}}) }}
                                                 </div>
-                                                <div class="col-12">
-                                                    {{ form_row(form.types) }}
+                                                <div class="col-12 mt-4">
+                                                    {{ form_row(form.types, {attr: {class: 'form-style'}}) }}
                                                 </div>
-                                                <div class="col-lg-4 col-12">
-                                                    {{ form_row(form.imageFile) }}
+                                                <div class="col-lg-4 col-12 mt-4">
+                                                    {{ form_row(form.imageFile, {attr: {class: 'form-style'}}) }}
                                                 </div>
-                                                <div class="col-lg-8 col-12">
+                                                <div class="col-lg-8 col-12 mt-4">
                                                     <img src="{{ vich_uploader_asset(property) }}" alt="" width="100" height="100">
                                                     <span>{{ property.filename }}</span>
                                                     <span><a href="#"><i class="lni lni-trash lni-32"></i></a></span>
                                                 </div>
-                                                <div class="col-12">
-                                                    {{ form_row(form.content) }}
+                                                <div class="col-12 mt-4">
+                                                    {{ form_row(form.content, {attr: {class: 'form-style'}}) }}
                                                 </div>
-                                                <div class="col-lg-6 col-12">
-                                                    {{ form_row(form.quarter) }}
+                                                <div class="col-lg-6 col-12 mt-4">
+                                                    {{ form_row(form.quarter, {attr: {class: 'form-style'}}) }}
                                                 </div>
-                                                <div class="col-lg-6 col-12">
-                                                    {{ form_row(form.owner) }}
+                                                <div class="col-lg-6 col-12 mt-4">
+                                                    {{ form_row(form.owner, {attr: {class: 'form-style'}}) }}
                                                 </div>
 
                                             </div>
@@ -82,22 +82,34 @@
 
                                         <div class="step-three-content">
                                             <div class="row">
-                                                <div class="col-lg-6 col-12">
-                                                    {{ form_row(form.area) }}
+                                                <div class="col-lg-6 col-12 mt-4">
+                                                    {{ form_row(form.area, {attr: {class: 'form-style'}}) }}
                                                 </div>
-                                                <div class="col-lg-6 col-12">
-                                                    {{ form_row(form.room) }}
+                                                <div class="col-lg-6 col-12 mt-4">
+                                                    {{ form_row(form.room, {attr: {class: 'form-style'}}) }}
                                                 </div>
 
-                                                <div class="col-lg-6 col-12">
-                                                    {{ form_row(form.status) }}
+                                                <div class="col-lg-6 col-12 mt-4">
+                                                    {{ form_row(form.status, {attr: {class: 'form-style'}}) }}
                                                 </div>
-                                                <div class="col-lg-6 col-12">
-                                                    {{ form_row(form.images) }}
+                                                <div class="col-lg-6 col-12 mt-4">
+                                                    {{ form_row(form.images, {attr: {class: 'form-style'}}) }}
                                                 </div>
                                             </div>
 
-                                                {{ form_row(form.state) }}
+                                            <div class="row">
+                                                <div class="col-lg-4 col-12 mt-4 mb-4">
+                                                    {{ form_row(form.state, {attr: {class: 'form-style'}}) }} 
+                                                </div>
+
+                                                <div class="col-lg-4 col-12 mt-4">
+                                                    {{ form_row(form.featured) }}
+                                                </div>
+
+                                                <div class="col-lg-4 col-12 mt-4">
+                                                    {{ form_row(form.published) }}
+                                                </div>
+                                            </div>
 
                                             <div class="row">
                                                 {% for image in property.images %}
@@ -126,3 +138,16 @@
         </div>
     </div>
 </section>
+
+{% block stylesheets %}
+    <style>
+        .form-group label {
+            font-size: 1rem;
+            font-weight: 400;
+        }
+
+        .form-control {
+            margin-top: 10px;
+        }
+    </style>
+{% endblock %}
