--- a/templates/admin/quarter/list/content.html.twig
+++ b/templates/admin/quarter/list/content.html.twig
@@ -55,6 +55,15 @@
                                     </div>
                                 </div>
                                 {% endfor %}
+
+                                <div class="row">
+                                    <div class="col-12">
+                                        <div class="pagination left">
+                                            {{ knp_pagination_render(quarters, 'admin/partials/pagination.html.twig') }}
+                                        </div>
+
+                                    </div>
+                                </div>
                             </div>
 
                         </div>
