--- a/templates/list/search/index.html.twig
+++ b/templates/list/search/index.html.twig
@@ -17,7 +17,7 @@
 
             <hr>
 
-            <span class="mb-2">Catégories</span>
+            <span class="mb-2 h6">Catégories</span>
             {{ form_row(form.categories) }}
 
             <div class="button mt-4">
