--- a/templates/admin/partials/menu.html.twig
+++ b/templates/admin/partials/menu.html.twig
@@ -25,16 +25,6 @@
             </li>
             
             <li>
-                <a {% if route_name == "app_annonce_terminer" %} class="active" {% endif %} href="{{ path('app_annonce_terminer') }}">
-                    <i class="lni lni-circle-plus"></i> Annonces Terminées
-                </a>
-            </li>
-            <li>
-                <a {% if route_name == "app_property_new" %} class="active" {% endif %} href="{{ path('app_property_new') }}">
-                    <i class="lni lni-circle-plus"></i> Annonces Annulées
-                </a>
-            </li>
-            <li>
                 <a {% if route_name == "app_category_index" %} class="active" {% endif %} href="{{ path('app_category_index') }}">
                     <i class="lni lni-apartment"></i> Catégories
                 </a>
@@ -56,12 +46,28 @@
             </li>
             <li>
                 <a {% if route_name == "app_state_index" %} class="active" {% endif %} href="{{ path('app_state_index') }}">
-                    <i class="lni lni-circle-plus"></i> Les Régions
+                    <i class="lni lni-map"></i> Les Régions
                 </a>
             </li>
             <li>
                 <a {% if route_name == "app_user_index" %} class="active" {% endif %} href="{{ path('app_user_index') }}">
                     <i class="lni lni-user"></i> Les Utilisateurs
+                </a>
+            </li>
+
+            <li>
+                <a {% if route_name == "app_annonce_inactive" %} class="active" {% endif %} href="{{ path('app_annonce_inactive') }}">
+                    <i class="lni lni-lock"></i> Annonces Inactives
+                </a>
+            </li>
+            <li>
+                <a {% if route_name == "app_annonce_terminer" %} class="active" {% endif %} href="{{ path('app_annonce_terminer') }}">
+                    <i class="lni lni-power-switch"></i> Annonces Terminées
+                </a>
+            </li>
+            <li>
+                <a {% if route_name == "app_annonce_annuler" %} class="active" {% endif %} href="{{ path('app_annonce_annuler') }}">
+                    <i class="lni lni-cross-circle"></i> Annonces Annulées
                 </a>
             </li>
             
