--- a/templates/admin/property/create/content.html.twig
+++ b/templates/admin/property/create/content.html.twig
@@ -18,33 +18,33 @@
                                     <div class="nav nav-tabs" id="nav-tab" role="tablist">
                                         <button class="nav-link active" id="nav-item-info-tab" data-bs-toggle="tab" data-bs-target="#nav-item-info" type="button" role="tab" aria-controls="nav-item-info" aria-selected="true">
                                             <span class="serial">01</span>
-                                            Step
-                                            <span class="sub-title">Ad Information</span>
+                                            Etape
+                                            
                                         </button>
                                         <button class="nav-link" id="nav-item-details-tab" data-bs-toggle="tab" data-bs-target="#nav-item-details" type="button" role="tab" aria-controls="nav-item-details" aria-selected="false">
                                             <span class="serial">02</span>
-                                            Step
-                                            <span class="sub-title">Ad Details</span>
+                                            Etape
+                                            
                                         </button>
                                         <button class="nav-link" id="nav-user-info-tab" data-bs-toggle="tab" data-bs-target="#nav-user-info" type="button" role="tab" aria-controls="nav-user-info" aria-selected="false">
                                             <span class="serial">03</span>
-                                            Step
-                                            <span class="sub-title">User Information</span>
+                                            Etape
+                                            
                                         </button>
                                     </div>
                                 </nav>
 
-                                {{ form_start(form, {attr: {class: 'default-form-style'}}) }}
+                                {{ form_start(form) }}
                                 <div class="tab-content" id="nav-tabContent">
                                     <div class="tab-pane fade show active" id="nav-item-info" role="tabpanel" aria-labelledby="nav-item-info-tab">
 
                                         <div class="step-one-content">
                                             <div class="row">
-                                                <div class="col-12">
-                                                    {{ form_row(form.title) }}
+                                                <div class="col-12 mt-4">
+                                                    {{ form_row(form.title, {attr: {class: 'form-style'}}) }}
                                                 </div>
-                                                <div class="col-12">
-                                                    {{ form_row(form.categories, {attr: {'class': 'select'}}) }}
+                                                <div class="col-12 mt-4">
+                                                    {{ form_row(form.categories, {attr: {'class': 'form-style'}}) }}
                                                 </div>
                                             </div>
                                         </div>
@@ -54,23 +54,23 @@
 
                                         <div class="step-two-content">
                                             <div class="row">
-                                                <div class="col-12">
-                                                    {{ form_row(form.price) }}
+                                                <div class="col-12 mt-4">
+                                                    {{ form_row(form.price, {attr: {class: 'form-style'}}) }}
                                                 </div>
-                                                <div class="col-12">
-                                                    {{ form_row(form.types) }}
+                                                <div class="col-12 mt-4">
+                                                    {{ form_row(form.types, {attr: {class: 'form-style'}}) }}
                                                 </div>
-                                                <div class="col-lg-6 col-12">
-                                                    {{ form_row(form.imageFile) }}
+                                                <div class="col-lg-6 col-12 mt-4">
+                                                    {{ form_row(form.imageFile, {attr: {class: 'form-style'}}) }}
                                                 </div>
-                                                <div class="col-12">
-                                                    {{ form_row(form.content) }}
+                                                <div class="col-12 mt-4">
+                                                    {{ form_row(form.content, {attr: {class: 'form-style'}}) }}
                                                 </div>
-                                                <div class="col-lg-6 col-12">
-                                                    {{ form_row(form.quarter) }}
+                                                <div class="col-lg-6 col-12 mt-4">
+                                                    {{ form_row(form.quarter, {attr: {class: 'form-style'}}) }}
                                                 </div>
-                                                <div class="col-lg-6 col-12">
-                                                    {{ form_row(form.owner) }}
+                                                <div class="col-lg-6 col-12 mt-4">
+                                                    {{ form_row(form.owner, {attr: {class: 'form-style'}}) }}
                                                 </div>
 
                                             </div>
@@ -81,25 +81,39 @@
 
                                         <div class="step-three-content">
                                             <div class="row">
-                                                <div class="col-lg-6 col-12">
-                                                    {{ form_row(form.area) }}
+                                                <div class="col-lg-6 col-12 mt-4">
+                                                    {{ form_row(form.area, {attr: {class: 'form-style'}}) }}
                                                 </div>
-                                                <div class="col-lg-6 col-12">
-                                                    {{ form_row(form.room) }}
+                                                <div class="col-lg-6 col-12 mt-4">
+                                                    {{ form_row(form.room, {attr: {class: 'form-style'}}) }}
                                                 </div>
 
-                                                <div class="col-lg-6 col-12">
-                                                    {{ form_row(form.status) }}
+                                                <div class="col-lg-6 col-12 mt-4">
+                                                    {{ form_row(form.status, {attr: {class: 'form-style'}}) }}
                                                 </div>
-                                                <div class="col-lg-6 col-12">
-                                                    {{ form_row(form.images) }}
+                                                <div class="col-lg-6 col-12 mt-4 mb-4">
+                                                    {{ form_row(form.images, {attr: {class: 'form-style'}}) }}
                                                 </div>
                                             </div>
 
-                                            {{ form_row(form.state) }}
+                                            <div class="row">
+                                                <div class="col-lg-4 col-12 mt-4">
+                                                    {{ form_row(form.state, {attr: {class: 'form-style'}}) }}
+                                                </div>
+
+                                                <div class="col-lg-4 col-12 mt-4">
+                                                    {{ form_row(form.published) }}
+                                                </div>
+
+                                                <div class="col-lg-4 col-12 mt-4">
+                                                    {{ form_row(form.featured) }}
+                                                </div>                                               
+                                            </div>
+
+
 
                                         </div>
-                                        <div class="button mb-0">
+                                        <div class="button mt-4">
                                             <button type="submit" class="btn">Add new</button>
                                         </div>
                                     </div>
@@ -116,3 +130,16 @@
         </div>
     </div>
 </section>
+
+{% block stylesheets %}
+    <style>
+        .form-group label {
+            font-size: 1rem;
+            font-weight: 400;
+        }
+
+        .form-control {
+            margin-top: 10px;
+        }
+    </style>
+{% endblock %}
