--- a/templates/admin/state/list/content.html.twig
+++ b/templates/admin/state/list/content.html.twig
@@ -63,6 +63,14 @@
                                 </div>
 
                                 {% endfor %}
+
+                                <div class="row">
+                                    <div class="col-12">
+                                        <div class="pagination left">
+                                            {{ knp_pagination_render(states, 'admin/partials/pagination.html.twig') }}
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
 
                         </div>
