Ajout de la reference et un peu de refacto

--- a/templates/about/index.html.twig
+++ b/templates/about/index.html.twig
@@ -52,13 +52,13 @@
             <div class="col-lg-6 col-md-6 col-12">
                 <div class="single-achievement wow fadeInUp" data-wow-delay=".2s">
                     <h3 class="counter">{{ envente | length }}</h3>
-                    <p>Biens En Vente</p>
+                    <p>Biens en vente</p>
                 </div>
             </div>
             <div class="col-lg-6 col-md-6 col-12">
                 <div class="single-achievement wow fadeInUp" data-wow-delay=".4s">
                     <h3 class="counter">{{ enlocation | length }}</h3>
-                    <p>Biens En Locations</p>
+                    <p>Biens en location</p>
                 </div>
             </div>
         </div>
