--- a/templates/home/featured/index.html.twig
+++ b/templates/home/featured/index.html.twig
@@ -9,9 +9,9 @@
         </div>
         <div class="single-head">
             <div class="row">
-                {% for property in latest_properties %}
+                {% for property in featured %}
 
-                {% if property.featured %}
+                {# {% if property.featured %} #}
                 
                     
                 <div class="col-lg-4 col-md-6 col-12">
@@ -53,7 +53,7 @@
                     </div>
                 </div>
 
-                {% endif %}
+                {# {% endif %} #}
 
                 {% endfor %}
             </div>
