--- a/templates/home/trending/index.html.twig
+++ b/templates/home/trending/index.html.twig
@@ -3,9 +3,7 @@
         <div class="row">
             <div class="col-12">
                 <div class="section-title">
-                    <h2 class="wow fadeInUp" data-wow-delay=".4s">Les dernières annonces</h2>
-{#                    <p class="wow fadeInUp" data-wow-delay=".6s">There are many variations of passages of Lorem#}
-{#                        Ipsum available, but the majority have suffered alteration in some form.</p>#}
+                    <h2 class="wow fadeInUp" data-wow-delay=".4s">Les dernières annonces</h2>                   
                 </div>
             </div>
         </div>
@@ -13,9 +11,9 @@
             <div class="col-12">
                 <nav>
                     <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                        <button class="nav-link active" id="nav-latest-tab" data-bs-toggle="tab" data-bs-target="#nav-latest" type="button" role="tab" aria-controls="nav-latest" aria-selected="true">Derniers ajouts</button>
-                        <button class="nav-link" id="nav-popular-tab" data-bs-toggle="tab" data-bs-target="#nav-popular" type="button" role="tab" aria-controls="nav-popular" aria-selected="false">A louer</button>
-                        <button class="nav-link" id="nav-random-tab" data-bs-toggle="tab" data-bs-target="#nav-random" type="button" role="tab" aria-controls="nav-random" aria-selected="false">A vendre</button>
+                        <button class="nav-link active" id="nav-latest-tab" data-bs-toggle="tab" data-bs-target="#nav-latest" type="button" role="tab" aria-controls="nav-latest" aria-selected="true">Derniers Ajouts</button>
+                        <button class="nav-link" id="nav-popular-tab" data-bs-toggle="tab" data-bs-target="#nav-popular" type="button" role="tab" aria-controls="nav-popular" aria-selected="false">En Location</button>
+                        <button class="nav-link" id="nav-random-tab" data-bs-toggle="tab" data-bs-target="#nav-random" type="button" role="tab" aria-controls="nav-random" aria-selected="false">En Vente</button>
                     </div>
                 </nav>
                 <div class="tab-content" id="nav-tabContent">
