--- a/templates/admin/property/create/content.html.twig
+++ b/templates/admin/property/create/content.html.twig
@@ -97,17 +97,24 @@
                                             </div>
 
                                             <div class="row">
+                                            
                                                 <div class="col-lg-4 col-12 mt-4">
                                                     {{ form_row(form.state, {attr: {class: 'form-style'}}) }}
                                                 </div>
 
                                                 <div class="col-lg-4 col-12 mt-4">
-                                                    {{ form_row(form.published) }}
+                                                    {{ form_row(form.reference, {attr: {class: 'form-style'}}) }}
+                                                    
+                                                </div>
+                                                    
+                                                <div class="col-lg-2 col-12 mt-4">
+                                                    {{ form_row(form.featured) }}
                                                 </div>
 
-                                                <div class="col-lg-4 col-12 mt-4">
-                                                    {{ form_row(form.featured) }}
-                                                </div>                                               
+                                                 <div class="col-lg-2 col-12 mt-4">
+                                                    {{ form_row(form.published) }}
+                                                </div>
+                                                
                                             </div>
 
 
