--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -68,6 +68,16 @@
 			padding: 0;
 		}
 
+		.navbar-brand img {
+			width: 40px;
+		}
+
+		.items-tab.custom-padding {
+			padding-top: 100px;
+		}
+
+		
+
 	</style>
 
  	{% block stylesheets %}
