--- a/templates/home/banner/categories/index.html.twig
+++ b/templates/home/banner/categories/index.html.twig
@@ -5,98 +5,48 @@
                 
                 <div class="col-lg-3 col-md-3  col-12">
 
-                    <a href="category.html" class="single-cat wow fadeInUp" data-wow-delay=".6s">
+                    <a href="{{ path('app_annonces') }}" class="single-cat wow fadeInUp" data-wow-delay=".6s">
                         <div class="icon">
-                            <img src="{{ asset('build/images/categories/real-estate.svg') }}" alt="#">
+                            <img src="{{ asset('build/images/categories/real-estate.svg') }}" alt="Maisons">
                         </div>
                         <h3>Maisons</h3>
-                        {# <h5 class="total">65</h5> #}
                     </a>
 
                 </div>
 
                 <div class="col-lg-3 col-md-3  col-12">
 
-                    <a href="category.html" class="single-cat wow fadeInUp" data-wow-delay=".4s">
+                    <a href="{{ path('app_annonces') }}" class="single-cat wow fadeInUp" data-wow-delay=".4s">
                         <div class="icon">
-                            <img src="{{ asset('build/images/categories/apartment.svg') }}" alt="#">
+                            <img src="{{ asset('build/images/categories/apartment.svg') }}" alt="Bureaux">
                         </div>
                         <h3>Bureaux</h3>
-                        {# <h5 class="total">35</h5> #}
                     </a>
 
                 </div>
 
                 <div class="col-lg-3 col-md-3  col-12">
 
-                    <a href="category.html" class="single-cat wow fadeInUp" data-wow-delay=".8s">
+                    <a href="{{ path('app_annonces') }}" class="single-cat wow fadeInUp" data-wow-delay=".8s">
                         <div class="icon">
-                            <img src="{{ asset('build/images/categories/restaurant.svg') }}" alt="#">
+                            <img src="{{ asset('build/images/categories/restaurant.svg') }}" alt="Commerces">
                         </div>
-                        <h3>Commerce</h3>
-                        {# <h5 class="total">22</h5> #}
+                        <h3>Commerces</h3>
                     </a>
 
                 </div>
                 <div class="col-lg-3 col-md-3  col-12">
 
-                    <a href="category.html" class="single-cat wow fadeInUp" data-wow-delay="1s">
+                    <a href="{{ path('app_annonces') }}" class="single-cat wow fadeInUp" data-wow-delay="1s">
                         <div class="icon">
-                            <img src="{{ asset('build/images/categories/matrimony.svg') }}" alt="#">
+                            <img src="{{ asset('build/images/categories/star.svg') }}" alt="Hotels">
                         </div>
-                        <h3>Hotel</h3>
-                        {# <h5 class="total">55</h5> #}
+                        <h3>Hotels</h3>
                     </a>
 
                 </div>
+
             </div>
-
-{#            <div class="row">#}
-{#                <div class="col-lg-3 col-md-3  col-12">#}
-
-{#                    <a href="category.html" class="single-cat wow fadeInUp" data-wow-delay=".4s">#}
-{#                        <div class="icon">#}
-{#                            <img src="{{ asset('build/images/categories/car.svg') }}" alt="#">#}
-{#                        </div>#}
-{#                        <h3>Vehicle</h3>#}
-{#                        <h5 class="total">35</h5>#}
-{#                    </a>#}
-
-{#                </div>#}
-{#                <div class="col-lg-3 col-md-3  col-12">#}
-
-{#                    <a href="category.html" class="single-cat wow fadeInUp" data-wow-delay=".6s">#}
-{#                        <div class="icon">#}
-{#                            <img src="{{ asset('build/images/categories/real-estate.svg') }}" alt="#">#}
-{#                        </div>#}
-{#                        <h3>Real Estate</h3>#}
-{#                        <h5 class="total">65</h5>#}
-{#                    </a>#}
-
-{#                </div>#}
-{#                <div class="col-lg-3 col-md-3  col-12">#}
-
-{#                    <a href="category.html" class="single-cat wow fadeInUp" data-wow-delay=".8s">#}
-{#                        <div class="icon">#}
-{#                            <img src="{{ asset('build/images/categories/laptop.svg') }}" alt="#">#}
-{#                        </div>#}
-{#                        <h3>Electronics</h3>#}
-{#                        <h5 class="total">22</h5>#}
-{#                    </a>#}
-
-{#                </div>#}
-{#                <div class="col-lg-3 col-md-3  col-12">#}
-
-{#                    <a href="category.html" class="single-cat wow fadeInUp" data-wow-delay="1s">#}
-{#                        <div class="icon">#}
-{#                            <img src="{{ asset('build/images/categories/matrimony.svg') }}" alt="#">#}
-{#                        </div>#}
-{#                        <h3>Matrimony</h3>#}
-{#                        <h5 class="total">55</h5>#}
-{#                    </a>#}
-
-{#                </div>#}
-{#            </div>#}
         </div>
     </div>
 </div>
