--- a/templates/layouts/header.html.twig
+++ b/templates/layouts/header.html.twig
@@ -4,9 +4,9 @@
             <div class="col-lg-12">
                 <div class="nav-inner">
                     <nav class="navbar navbar-expand-lg">
-                        <a class="navbar-brand" href="#">
-                            <img src="{{ asset('build/images/logo/logo.svg') }}" alt="Logo">
-                            {# <img src="{{ asset('static/logo-haya.png') }}" alt="Logo" width="80" height="50"> #}
+                        <a class="navbar-brand" href="{{ path('app_home') }}">
+                            {# <img src="{{ asset('build/images/logo/logo.svg') }}" alt="Logo"> #}
+                            <img src="{{ asset('static/logo-h.png') }}" alt="Logo" width="50">
 
                         </a>
                         <button class="navbar-toggler mobile-menu-btn" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
