--- a/templates/soon/index.html.twig
+++ b/templates/soon/index.html.twig
@@ -21,22 +21,26 @@
                     </div>
                     <div class="inner-content">
                         <div class="box">
-                            <h1 id="days"><i class="lni lni-facebook-original"></i></h1>
-                            <h2 id="daystxt">Facebook</h2>
+                            <a href="{{ facebook }}">
+                                <h1 id="days"><i class="lni lni-facebook-original"></i></h1>
+                                <h2 id="daystxt">Facebook</h2>
+                            </a>
+                        </div>
 
-                        </div>
                         <div class="box">
-                            <h1 id="days"><i class="lni lni-twitter-original"></i></h1>
-                            <h2 id="hourstxt">Twitter</h2>
+                            <a href="{{ facebook }}">
+                                <h1 id="days"><i class="lni lni-twitter-original"></i></h1>
+                                <h2 id="hourstxt">Twitter</h2>
+                            <a>
                         </div>
+
                         <div class="box">
-                            <h1 id="days"><i class="lni lni-linkedin-original"></i></h1>
-                            <h2 id="minutestxt">LinkedIn</h2>
+                            <a href="{{ facebook }}">
+                                <h1 id="days"><i class="lni lni-linkedin-original"></i></h1>
+                                <h2 id="minutestxt">LinkedIn</h2>
+                            </a>
                         </div>
-{#                        <div class="box">#}
-{#                            <h1 id="days"><i class="lni lni-facebook"></i></h1>#}
-{#                            <h2 id="secondstxt">Secondes</h2>#}
-{#                        </div>#}
+
                     </div>
                     <div style="background: rgb(204, 24, 24);" class="alert">
                         <h1 style="padding: 50px 80px;color: white;">We are sorry, Event ended ! </h1>
