--- a/templates/about/breadcrumb/index.html.twig
+++ b/templates/about/breadcrumb/index.html.twig
@@ -8,7 +8,7 @@
             </div>
             <div class="col-lg-6 col-md-6 col-12">
                 <ul class="breadcrumb-nav">
-                    <li><a href="#">Accueil</a></li>
+                    <li><a href="{{ path('app_home') }}">Accueil</a></li>
                     <li>A propos</li>
                 </ul>
             </div>
