--- a/templates/admin/annuler/index.html.twig
+++ b/templates/admin/annuler/index.html.twig
@@ -14,6 +14,12 @@
                     <div class="dashboard-block">
                         <h3 class="block-title">Les annonces annulées</h3>
 
+                        <nav class="list-nav">
+                            <ul>
+                                <li class=""><a href="#">Nombre d'annonces <span>{{ annuler | length }}</span></a></li>
+                            </ul>
+                        </nav>
+
                         <div class="my-items">
                             <div class="item-list-title">
                                 <div class="row align-items-center">
