--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -60,7 +60,7 @@
                         <div class="my-items">
                             <div class="item-list-title">
                                 <div class="row align-items-center">
-                                    <div class="col-lg-5 col-md-5 col-12">
+                                    <div class="col-lg-6 col-md-6 col-12">
                                         <p>Titre de l'annonce</p>
                                     </div>
                                     <div class="col-lg-2 col-md-2 col-12">
@@ -69,7 +69,7 @@
                                     <div class="col-lg-2 col-md-2 col-12">
                                         <p>Type</p>
                                     </div>
-                                    <div class="col-lg-3 col-md-3 col-12 align-right">
+                                    <div class="col-lg-2 col-md-2 col-12 align-right">
                                         <p>Actions</p>
                                     </div>
                                 </div>
@@ -79,11 +79,11 @@
 
                             <div class="single-item-list">
                                 <div class="row align-items-center">
-                                    <div class="col-lg-5 col-md-5 col-12">
+                                    <div class="col-lg-6 col-md-6 col-12">
                                         <div class="item-image">
                                             <img src="{{ vich_uploader_asset(property) | imagine_filter('admin_property_image') }}" alt="#">
                                             <div class="content">
-                                                <h3 class="title"><a href="#">{{ property.title }}</a></h3>
+                                                <h3 class="title"><a href="{{ path('app_property_edit', {id: property.id}) }}">{{ property.title }}</a></h3>
                                                 <span class="price">{{ property.price | number_format(0, ',', '.') }} Fcfa</span>
                                             </div>
                                         </div>
@@ -98,7 +98,7 @@
                                             <p>{{ type.name }}</p>
                                         {% endfor %}
                                     </div>
-                                    <div class="col-lg-3 col-md-3 col-12 align-right">
+                                    <div class="col-lg-2 col-md-2 col-12 align-right">
                                         <ul class="action-btn">
                                             <li><a href="{{ path('app_property_edit', {id: property.id}) }}"><i class="lni lni-pencil"></i></a></li>
                                             <li>
@@ -107,7 +107,6 @@
                                                     <button class="btn"><i class="lni lni-trash"></i></button>
                                                 </form>
                                             </li>   
-                                            {# <li><a href="#"><i class="lni lni-trash"></i></a></li> #}
                                         </ul>
                                     </div>
                                 </div>
