--- a/templates/admin/quarter/list/content.html.twig
+++ b/templates/admin/quarter/list/content.html.twig
@@ -50,7 +50,12 @@
                                     <div class="col-lg-5 col-md-5 col-12 align-right">
                                         <ul class="action-btn">
                                             <li><a href="{{ path('app_quarter_edit', {id: quarter.id}) }}"><i class="lni lni-pencil"></i></a></li>
-                                            <li><a href="#"><i class="lni lni-trash"></i></a></li>
+                                            <li>
+                                                <form method="post" action="{{ path('app_quarter_delete', {'id': quarter.id}) }}" onsubmit="return confirm('Etes vous sure de vouloir effacer ce quartier ?');">
+                                                    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ quarter.id) }}">
+                                                    <button class="btn"><i class="lni lni-trash"></i></button>
+                                                </form>
+                                            </li>
                                         </ul>
                                     </div>
                                 </div>
