--- a/templates/admin/terminer/index.html.twig
+++ b/templates/admin/terminer/index.html.twig
@@ -14,10 +14,16 @@
                     <div class="dashboard-block">
                         <h3 class="block-title">Les annonces terminées</h3>
 
+                        <nav class="list-nav">
+                            <ul>
+                                <li class="active"><a href="#">Nombre d'annonces <span>{{ terminer | length }}</span></a></li>
+                            </ul>
+                        </nav>
+
                         <div class="my-items">
                             <div class="item-list-title">
                                 <div class="row align-items-center">
-                                    <div class="col-lg-5 col-md-5 col-12">
+                                    <div class="col-lg-6 col-md-6 col-12">
                                         <p>Titre de l'annonce</p>
                                     </div>
                                     <div class="col-lg-2 col-md-2 col-12">
@@ -26,7 +32,7 @@
                                     <div class="col-lg-2 col-md-2 col-12">
                                         <p>Type</p>
                                     </div>
-                                    <div class="col-lg-3 col-md-3 col-12 align-right">
+                                    <div class="col-lg-2 col-md-2 col-12 align-right">
                                         <p>Actions</p>
                                     </div>
                                 </div>
@@ -36,11 +42,11 @@
 
                                 <div class="single-item-list">
                                     <div class="row align-items-center">
-                                        <div class="col-lg-5 col-md-5 col-12">
+                                        <div class="col-lg-6 col-md-6 col-12">
                                             <div class="item-image">
                                                 <img src="{{ vich_uploader_asset(property) | imagine_filter('admin_property_image') }}" alt="#">
                                                 <div class="content">
-                                                    <h3 class="title"><a href="#">{{ property.title }}</a></h3>
+                                                    <h3 class="title"><a href="{{ path('app_property_edit', {id: property.id}) }}">{{ property.title }}</a></h3>
                                                     <span class="price">{{ property.price | number_format(0, ',', '.') }} Fcfa</span>
                                                 </div>
                                             </div>
@@ -55,7 +61,7 @@
                                                 <p>{{ type.name }}</p>
                                             {% endfor %}
                                         </div>
-                                        <div class="col-lg-3 col-md-3 col-12 align-right">
+                                        <div class="col-lg-2 col-md-2 col-12 align-right">
                                             <ul class="action-btn">
                                                 <li><a href="{{ path('app_property_edit', {id: property.id}) }}"><i class="lni lni-pencil"></i></a></li>
                                             
