--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -7,12 +7,12 @@
         <div class="row align-items-center">
             <div class="col-lg-6 col-md-6 col-12">
                 <div class="breadcrumbs-content">
-                    <h1 class="page-title">Contact Us</h1>
+                    <h1 class="page-title">Nous Contacter</h1>
                 </div>
             </div>
             <div class="col-lg-6 col-md-6 col-12">
                 <ul class="breadcrumb-nav">
-                    <li><a href="{{ path('app_home') }}">Home</a></li>
+                    <li><a href="{{ path('app_home') }}">Accueil</a></li>
                     <li>Contact</li>
                 </ul>
             </div>
