--- a/templates/home/action/index.html.twig
+++ b/templates/home/action/index.html.twig
@@ -5,9 +5,8 @@
                 <div class="inner">
                     <div class="content">
                         <h2 class="wow fadeInUp" data-wow-delay=".4s">Vous voulez acheter, louer ou vendre un bien immobilier ?</h2>
-{#                        <p class="wow fadeInUp" data-wow-delay=".6s">Contactez-nous maintenant</p>#}
                         <div class="button wow fadeInUp" data-wow-delay=".8s">
-                            <a href="javascript:void(0)" class="btn">Contactez - nous</a>
+                            <a href="{{ path('app_contact') }}" class="btn">Contactez - nous</a>
                         </div>
                     </div>
                 </div>
