--- a/templates/list/breadcrumb/index.html.twig
+++ b/templates/list/breadcrumb/index.html.twig
@@ -3,12 +3,12 @@
         <div class="row align-items-center">
             <div class="col-lg-6 col-md-6 col-12">
                 <div class="breadcrumbs-content">
-                    <h1 class="page-title">La liste de toutes nos annonces immobilières</h1>
+                    <h1 class="page-title">Nos Annonces Immobilières</h1>
                 </div>
             </div>
             <div class="col-lg-6 col-md-6 col-12">
                 <ul class="breadcrumb-nav">
-                    <li><a href="#">Accueil</a></li>
+                    <li><a href="{{ path('app_home') }}">Accueil</a></li>
                     <li>Annonces Immobilières</li>
                 </ul>
             </div>
