--- a/templates/list/content/card.html.twig
+++ b/templates/list/content/card.html.twig
@@ -14,7 +14,7 @@
                 {% endfor %}
 
                 <h3 class="title">
-                    <a href="#">{{ property.title }}</a>
+                    <a href="{{ path('app_annonce_detail', {slug: property.slug}) }}">{{ property.title }}</a>
                 </h3>
                 <p class="location"><a href="javascript:void(0)"><i class="lni lni-map-marker">
                         </i>{{ property.quarter }}</a></p>
