--- a/templates/admin/account/login/index.html.twig
+++ b/templates/admin/account/login/index.html.twig
@@ -13,7 +13,7 @@
             </div>
             <div class="col-lg-6 col-md-6 col-12">
                 <ul class="breadcrumb-nav">
-                    <li><a href="{{ path('app_home') }}">Home</a></li>
+                    <li><a href="{{ path('app_home') }}">Accueil</a></li>
                     <li>Login</li>
                 </ul>
             </div>
@@ -33,12 +33,6 @@
 
                             {% if error %}
                                 <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-                            {% endif %}
-
-                            {% if app.user %}
-                                <div class="mb-3">
-                                    You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
-                                </div>
                             {% endif %}
 
                             <label>Email</label>
