--- a/templates/list/search/index.html.twig
+++ b/templates/list/search/index.html.twig
@@ -2,22 +2,23 @@
     {{ form_start(form, {attr: {'class': 'filter js-filter-form'}}) }}
 
         <div class="single-widget search">
-            <h3>Rechercher & Filtrer</h3>
+            <h3 style="color: #5830e0;">Rechercher & Filtrer</h3>
             {{ form_row(form.q, {attr: {'class': 'form-style'}}) }}
         </div>
 
         <div class="single-widget">
-            <h3>Filtrer</h3>
+            <h3 style="color: #5830e0;">Filtrer</h3>
 
+            <hr>
 
-            <span class="mt-2 mb-2 h6">Status</span>
+            <span class="mt-2 mb-2 h6" style="color: #5830e0;">Status</span>
             <div class="select">
                 {{ form_row(form.types)}}
             </div>
 
             <hr>
 
-            <span class="mb-2 h6">Catégories</span>
+            <span class="mb-2 h6" style="color: #5830e0;">Catégories</span>
             {{ form_row(form.categories) }}
 
             <div class="button mt-4">
