--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,9 +4,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Haya | Le Spécialiste des annonces immobilières au Niger</title>
 
-	<link rel="shortcut icon" type="image/x-icon" href="{{ asset('build/images/favicon.svg') }}" />
+
+	<link rel="stylesheet" href="{{ asset('favicon.ico') }}">
 
 	<link rel="stylesheet" href="{{ asset('assets/css/bootstrap.min.css') }}">
 
@@ -18,7 +19,7 @@
 
 	<link rel="stylesheet" href="{{ asset('assets/css/main.css') }}">
 
-
+	
 	{# Fonts #}
 	<link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato&amp;display=swap" rel="stylesheet">
