Refactoring, ajout de quelques images ...

--- a/templates/about/index.html.twig
+++ b/templates/about/index.html.twig
@@ -9,7 +9,7 @@
         <div class="row align-items-center justify-content-center">
             <div class="col-lg-6 col-md-12 col-12">
                 <div class="content-left wow fadeInLeft" data-wow-delay=".3s">
-                    <img src="{{ asset('static/about1.jpg') | imagine_filter('about_image')}}">
+                    <img src="{{ asset('static/house-key.jpg') | imagine_filter('about_image')}}">
                 </div>
             </div>
             <div class="col-lg-6 col-md-12 col-12">
@@ -30,6 +30,7 @@
                         Haya est une plateforme spécialisée dans la location, l'achat et la vente des biens immobiliers au Niger. <br>
                     </p>
                     <h3>Notre Mission</h3>
+                    
                     <p class="mb-2">
                         1.  Fournir de cadre idéal pour la publication en ligne de vos annonces
                     </p>
