--- a/templates/admin/account/login/index.html.twig
+++ b/templates/admin/account/login/index.html.twig
@@ -61,9 +61,9 @@
 
                         </div>
 
-                        <p class="outer-link">
+                        {# <p class="outer-link">
                             Vous n'avez pas de compte? <a href="{{ path('app_register') }}">Créez un ici</a>
-                        </p>
+                        </p> #}
                     </form>
                 </div>
             </div>
