--- a/templates/home/cities/index.html.twig
+++ b/templates/home/cities/index.html.twig
@@ -8,7 +8,7 @@
 
                 <div class="section-title">
 
-                    <h2 class="wow fadeInUp" data-wow-delay=".4s">Les annonces par région</h2>
+                    <h2 class="wow fadeInUp" data-wow-delay=".4s">Nos annonces par région</h2>
 
                 </div>
 
